--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/Kerblif/ORG-Homes.git"
   },
-  "author": "EH5, DV1, DA2, AS1",
+  "author": "Kerblif",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Kerblif/ORG-Homes/issues"
